# demo_ms_llm

./: .dockerignore  .env.example  .gitignore  AGENT_PROMPTS.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
agents/: README.md
agents/api_scaffold/: agent.yml  system.md
agents/app_observability/: agent.yml  system.md
agents/cloud_architecture/: agent.yml  system.md
agents/cloud_observability/: agent.yml  system.md
agents/database_rationale/: agent.yml  system.md
agents/final_reviewer/: agent.yml  system.md
agents/llm_integration/: agent.yml  system.md
agents/packaging_docs/: agent.yml  system.md
agents/persistence/: agent.yml  system.md
agents/quality_ci/: agent.yml  system.md
agents/resilience_design/: agent.yml  system.md
agents/security_hardening/: agent.yml  system.md
app/: main.py
app/api/: deps.py  health.py
app/core/: auth.py  config.py  encoding.py  errors.py  logging.py  metrics.py  middleware.py  ratelimit.py  request_id.py  responses.py  security_headers.py  tracing.py
app/models/: __init__.py  interaction.py
app/repositories/: conversations.py  database.py  postgres.py
app/schemas/: chat.py
app/services/: cache.py  formatting.py  guardrail.py  llm.py  model_selector.py  providers.py  resilience.py
conf/: defaults.yml
docs/: PLAYBOOK_DEMONSTRACAO.md  RELATORIO_RESULTADOS.md  architecture.md  observability.md  security.md
docs/architecture/: 01_arquitetura_escalonamento.md  02_observabilidade.md  03_banco_de_dados.md  04_resiliencia.md  05_evolucoes.md  DECISOES_AWS.md
migrations/: env.py
teams/: team-fase1-scaffold.yml  team-fase2-core.yml  team-fase3-hardening-obs.yml  team-fase4-qualidade.yml  team-fase5-arquitetura.yml  team-itau-challenge.yml
tests/: conftest.py  test_body_encoding.py  test_cache.py  test_chat_contract.py  test_config.py  test_formatting.py  test_guardrail.py  test_health.py  test_llm_client.py  test_model_selector.py  test_observability.py  test_quality_gaps.py  test_repository_inmemory.py  test_repository_postgres.py  test_security.py
(+41 files in other folders)
