[project]
name = "itau-ms"
version = "0.1.0"
description = "Micro-servico de chat com LLM (OpenRouter + fallback Gemini)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "respx>=0.21",
    "pytest-cov>=5.0",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: `Depends(...)` em default de parâmetro é o padrão idiomático do FastAPI.
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true

# Strict-ish nas camadas de negócio (services/repositories/schemas/models).
# Camadas de borda (middlewares ASGI puros) ficam no modo padrão: os hooks
# ASGI (scope/receive/send) não têm tipos práticos sem TypedDicts extensos.
[[tool.mypy.overrides]]
module = [
    "app.services.*",
    "app.repositories.*",
    "app.schemas.*",
    "app.models.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

# --- Cobertura ----------------------------------------------------------------
# Meta do desafio: >=80% nas camadas de serviço/repositório (hoje: 85-100%).
# fail_under aplica-se ao total do pacote app (95% no momento da configuração).
[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
